Bug 565194 - [15] Escaped \t processed as whitespace in a text block
Change-Id: Ie936c06e75f0a889ce6b07f5f88b6e8158b46050
Signed-off-by: Jay Arthanareeswaran <jarthana@in.ibm.com>